[JBPAPP-890] web.xml modified to web.xml.org - Subsequent runs fail.
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/branches/jbossws-native-2.0.1.SP2_CP@7630 50344849-fb0f-0410-a53f-a94597aac05c